--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue-router": "^3.1.6",
         "vue-tel-input": "^4.4.0",
         "vuetify": "^2.2.26",
+        "vuetify-confirm": "^2.0.3",
         "vuex": "^3.3.0"
     },
     "devDependencies": {
